# campus-agora

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  biome.json  mkdocs.yml  package.json  pyproject.toml
.github/workflows/: ci.yml
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/web/: index.html  package.json
apps/web/src/: main.tsx
apps/web/src/app/: App.tsx
apps/web/src/components/layout/: AppShell.tsx
apps/web/src/components/ui/: Button.tsx
apps/web/src/styles/: globals.css  themes.css  tokens.css
contracts/: openapi.json
crates/api/: Cargo.toml
crates/api/src/: lib.rs  main.rs
crates/api/tests/: health.rs  openapi.rs
crates/application/: Cargo.toml
crates/application/src/: lib.rs
crates/db/: Cargo.toml
crates/db/migrations/: 20260706000000_init.sql
crates/db/src/: lib.rs
crates/db/tests/: migrations.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
docker/api/: Dockerfile
docs/: index.md
docs/ai-log/: done.md  todo.md
docs/architecture/: api-contracts.md  auth-permissions.md  backend.md  desktop.md  overview.md
docs/constraints/: advanced-engineering-reference.md  api-contract-reference.md  archive-community-reference.md  backend-reference.md  content-boundary-reference.md  frontend-reference.md  index.md  monorepo-reference.md  operations-risk-reference.md  product-governance-reference.md  product-positioning-reference.md
docs/engineering/: development.md  lfs.md  quality.md
docs/operations/: deployment.md  overview.md  security.md
docs/product/: milestones.md  overview.md  privacy.md
docs/superpowers/plans/: 2026-07-06-m0-1-contract-quality-gates.md  2026-07-06-m0-2-governance-docs-boundaries.md  2026-07-06-m0-repository-skeleton.md
docs/superpowers/specs/: 2026-07-06-campus-agora-init-design.md
scripts/: README.md  build.sh
scripts/ci/: backend.sh  container.sh  contract.sh  desktop.sh  docs.sh  frontend.sh
tools/: README.md
tools/docs/: mkdocs.yml
