[package]
name = "campus_agora_api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum.workspace = true
campus_agora_application = { path = "../application" }
campus_agora_db = { path = "../db" }
campus_agora_domain = { path = "../domain" }
serde.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
serde_json.workspace = true
tower.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "campus-agora-api"
path = "src/main.rs"
