[package]
name = "campus-agora-desktop"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/campus-agora/campus-agora"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[[bin]]
name = "campus-agora-desktop"
path = "src/main.rs"
