[package]
name = "campus-agora-desktop"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/114August514/campus-agora"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[[bin]]
name = "campus-agora-desktop"
path = "src/main.rs"
